[feat] 이벤트 전파 단계 추가

--- a/study/javascript/이벤트버블링,캡쳐링,위임.md
+++ b/study/javascript/이벤트버블링,캡쳐링,위임.md
@@ -80,7 +80,8 @@
 - 이벤트 버블링은 타깃 이벤트에서 시작해서 <html> 요소를 거쳐 document 객체를 만날 때까지 각 노드에서 모두 발생
 - 몇몇 이벤트는 window 객체까지 거슬러 올라가기도 함. 이 때도 모든 핸들러가 호출.
 - 핸들러에게 이벤트를 완전히 처리하고 난 후 버블링을 중단하도록 명령할 수도 있음.
-- 이벤트 객체의 메서드인 stopPropagation()를 사용
+- 이벤트 객체의 메소드인 stopPropagation()을 사용하면 <span style="font-weight:bold;">부모 NODE 이벤트 전파 중지</span>
+- 이벤트 객체의 메소드인 stopImmediatePropagation()을 사용하면 <span style="font-weight:bold;">부모 및 형제 이벤트 전파 중지</span>
 
 ```jsx
 <body onclick="alert(`버블링은 여기까지 도달하지 못합니다.`)">
