[feat] 이벤트 위임 추가
위임 설명추가

--- a/study/javascript/이벤트버블링,캡쳐링,위임.md
+++ b/study/javascript/이벤트버블링,캡쳐링,위임.md
@@ -1,5 +1,16 @@
 #### 이벤트 핸들링(버블링, 캡쳐링, 위임)
 
+
+![이벤트 전파 단계](https://ko.javascript.info/article/bubbling-and-capturing/eventflow.svg)
+출처: https://ko.javascript.info/bubbling-and-capturing
+참고: https://domevents.dev/
+
+<br>
+
+---
+
+<br>
+
 |명칭|개념|
 |--|--|
 |<span style="font-weight:bold;">이벤트 버블링(bubbling)</span>|이벤트가 상위로 전파(자식 => 부모)|
@@ -11,8 +22,8 @@
 |명칭|개념|
 |--|--|
 |stopPropagation()|​이벤트 전파 중지|
-|stopImmediatePropagation()|이벤트 전파 중지 + 형제 이벤트 실행 중지|
-|preventDefault()|이벤트 전파 중지 + 형제 이벤트 실행 중지 + 이벤트 기본 동작 중지|
+|stopImmediatePropagation()|이벤트 전파 중지 + 다른 이벤트 핸들러 실행 중지|
+|preventDefault()|이벤트 전파 중지 + 다른 이벤트 핸들러 실행 중지 + 이벤트 기본 동작 중지|
 
 #### target, currentTarget(this)
 
@@ -77,11 +88,13 @@
 
 #### 이벤트 버블링 중단하기
 
-- 이벤트 버블링은 타깃 이벤트에서 시작해서 <html> 요소를 거쳐 document 객체를 만날 때까지 각 노드에서 모두 발생
-- 몇몇 이벤트는 window 객체까지 거슬러 올라가기도 함. 이 때도 모든 핸들러가 호출.
-- 핸들러에게 이벤트를 완전히 처리하고 난 후 버블링을 중단하도록 명령할 수도 있음.
-- 이벤트 객체의 메소드인 stopPropagation()을 사용하면 <span style="font-weight:bold;">부모 NODE 이벤트 전파 중지</span>
-- 이벤트 객체의 메소드인 stopImmediatePropagation()을 사용하면 <span style="font-weight:bold;">부모 및 형제 이벤트 전파 중지</span>
+<ol>
+  <li> 이벤트 버블링은 타깃 이벤트에서 시작해서 <html> 요소를 거쳐 document 객체를 만날 때까지 각 노드에서 모두 발생</li>
+  <li> 몇몇 이벤트는 window 객체까지 거슬러 올라가기도 함. 이 때도 모든 핸들러가 호출.</li>
+  <li> 핸들러에게 이벤트를 완전히 처리하고 난 후 버블링을 중단하도록 명령할 수도 있음.</li>
+  <li> 이벤트 객체의 메소드인 stopPropagation()을 사용하면 <span style="font-weight:bold;">부모 NODE 이벤트 전파 중지</span></li>
+  <li> 이벤트 객체의 메소드인 stopImmediatePropagation()을 사용하면 <span style="font-weight:bold;">부모 및 형제 이벤트 전파 중지</span></li>
+</ol>
 
 ```jsx
 <body onclick="alert(`버블링은 여기까지 도달하지 못합니다.`)">
@@ -97,5 +110,107 @@
 
 #### 이벤트 캡쳐링
 
+- ##### 핸들러 추가
 
-![이벤트 전파 단계](https://ko.javascript.info/article/bubbling-and-capturing/eventflow.svg)
+  - ###### onEvent(click, focus, dbclick, abort, change, keyDown ...)에셔는 <span style="color:red;">불가능</span>
+    - 위의 속성을 IDL이라고 한다. 해당 속성은 이벤트 버블링은 가능하지만, 캡처링은 동작하지 않는다.
+    - https://html.spec.whatwg.org/multipage/webappapis.html#event-handler-idl-attributes
+
+  - ###### addEventListener(event, handler)
+  ```jsx
+  element.addEventListener(..., {capture: true})
+  // 아니면, 아래 같이 {capture: true} 대신, true 가능
+  element.addEventListener(..., true)
+  ```
+
+---
+
+- ##### 핸들러 삭제
+  - ###### removeEventListener(event, handler)
+  ```jsx
+
+  element.removeEventListener(...) // 캡쳐링을 하지 않았다면 이 방법으로 핸들러 제거
+  element.removeEventListener(..., {capture: true}) // 캡쳐링을 했다면 이 방법으로 핸들러 제거
+  ```
+
+---
+
+- ##### 중복 핸들러
+  - ###### addEventListener(event, handler); addEventListener(event, handler);
+  ```jsx
+  element.addEventListener("click", e => alert(1)); // 첫 번째로 트리거
+  element.addEventListener("click", e => alert(2)); // 두 번째로 트리거
+  ```
+
+<br>
+
+---
+
+<br>
+
+#### 이벤트 위임
+<ol>
+  <li>비슷한 방식으로 다수 NODE에 핸들러 추가하는 방법</li>
+  <li>NODE마다 핸들러를 할당하지 않고, 공통 조상에 이벤트 핸들러를 단 하나만 할당해도 동작(메모리 절약)</li>
+  <li>공통 상위 NODE에 할당한 핸들러에 event.target을 사용하여 실제 이벤트 발생지점 확인 가능</li>
+</ol>
+
+- ##### 이벤트 할당 (근접한 NODE)
+  - closest : 자기 자신을 포함해서 부모=>루트까지 순회
+```jsx
+table.onclick = function (event) {
+    let td = event.target.closest('td'); // 이벤트 핸들러 발생한 NODE부터 최상위 조상까지 td를 찾는다.
+
+    if (!td) return; // 없으면 중단
+
+    if (!table.contains(td)) return; // table에 포함되어있지 않으면 중단
+
+    highlight(td); // 찾으면 컬러 변경
+}
+
+<table id="bagua-table">
+  <tbody>
+    <tr>
+        <th colspan="3"><em>Bagua</em> Chart: Direction, Element, Color, Meaning</th>
+    </tr>
+    <tr>
+        <td class="nw"><strong>Northwest</strong>
+            <br>Metal
+            <br>Silver
+            <br>Elders
+        </td>
+        <td class="n"><strong>North</strong>
+            <br>Water
+            <br>Blue
+            <br>Change
+        </td>
+        <td class="ne"><strong>Northeast</strong>
+            <br>Earth
+            <br>Yellow
+            <br>Direction
+        </td>
+    </tr>
+  </tbody>
+</table>
+```
+
+<br>
+
+- ##### 이벤트 할당 (선언적 방식)
+  - 지도에 마커가 n개 있을 때 각각 이벤트를 할당하지 않고, 선언적 방식으로 메모리를 절약할 수 있다.
+
+```jsx
+document.addEventListener('click', function(event) {
+  if (event.target.nodeName === "MARKER") { // 마커일 때
+    const lat = event.target.dataset.lat;
+    const lng = event.target.dataset.lng;
+    viewPosition(lat, lng);
+  }
+});
+
+<map>
+  <marker data-lat="37.123" data-lng="127.123">서울시 1번</marker>
+  <marker data-lat="37.456" data-lng="127.456">서울시 2번</marker>
+  <marker data-lat="37.789" data-lng="127.789">서울시 3번</marker>
+</map>
+```
