[feat] 내용 추가중

--- a/study/javascript/기명함수,익명함수.md
+++ b/study/javascript/기명함수,익명함수.md
@@ -1,21 +1,91 @@
-#### 기명 함수, 익명 함수(함수 표현식)
-* 기명 함수
-    * 브라우저가 런타임 이전에 선언 및 할당한다.
-    * 호이스팅 된다.
-* 익명 함수(함수 표현식)
-    * 브라우저가 런타임에 할당한다.
-    * 호이스팅 되지 않는다.
+### 기명 함수, 익명 함수(함수 표현식, 객체로서의 함수)
 
-```javascript
+---
+
+- ##### 기명 함수
+    - 브라우저가 런타임 이전에 선언 및 할당한다.
+    - 호이스팅 된다.
+- ##### 익명 함수(함수 표현식, 객체로서의 함수)
+    - 브라우저가 런타임에 할당한다.
+    - 호이스팅 되지 않는다.
+
+```jsx
 기명 함수
 function hello() {
     console.log("일반 함수(기명 함수)");
 }
 
 
-익명 함수(함수 표현식)
+익명 함수(함수 표현식, 객체로서의 함수)
 const hello = function() {
     console.log("익명 함수");
 }
+```
 
+#### 함수 객체 property
+
+- ##### name property
+    - 함수 이름을 가져온다.
+
+```jsx
+function fname() {
+    console.log("fname");
+}
+
+const cname = function() {
+    console.log("cname");
+}
+
+function s() {
+    return function() {
+        return 'a';
+    }
+}
+
+console.log(fname.name); // fname
+console.log(cname.name); // cname
+console.log(s.name); // s
+console.log(s().name); // ''
+
+```
+
+- ##### length property
+    - 함수 매개변수의 개수를 반환한다.
+
+--- 
+
+#### 기명 함수 표현식
+- NFE(Named Function Expression)는 이름이 있는 함수 표현식이다.
+
+```jsx
+
+// (1)
+let sayHi = function(who) {
+  if (who) {
+    alert(`Hello, ${who}`);
+  } else {
+    sayHi("Guest"); // TypeError: sayHi is not a function
+  }
+};
+
+let welcome = sayHi;
+sayHi = null;
+
+welcome(); // 중첩 sayHi 호출은 더 이상 불가능합니다!
+
+============================================================
+
+// (2)
+let sayHi = function func(who) {
+  if (who) {
+    alert(`Hello, ${who}`);
+  } else {
+    func("Guest"); // 원하는 값이 제대로 출력됩니다.
+  }
+};
+
+let welcome = sayHi;
+sayHi = null;
+
+welcome(); // Hello, Guest (중첩 호출이 제대로 동작함)
 ```
