[feat] 함수, 에러핸들링 내용 추가중

--- a/study/javascript/기명함수,익명함수,고차함수.md
+++ b/study/javascript/기명함수,익명함수,고차함수.md
@@ -1,5 +1,7 @@
 ### 기명 함수, 익명 함수(함수 표현식, 객체로서의 함수)
 
+[참조 자료 1](https://poiemaweb.com/js-array-higher-order-function)
+
 ---
 
 - ##### 기명 함수
@@ -89,3 +91,46 @@ sayHi = null;
 
 welcome(); // Hello, Guest (중첩 호출이 제대로 동작함)
 ```
+
+
+--- 
+
+#### 고차함수 (Higher Order Function)
+  - 함수를 인자로 전달받거나 함수를 결과로 반환하는 함수
+  - 인자로 받은 함수를 필요한 시점에 호출하거나 클로저를 생성하여 반환할 수도 있다.
+
+  ```jsx
+
+  // 함수를 인자로 전달받고 함수를 반환하는 고차 함수
+  function makeCache(func) {
+    let cache = new Map();
+    return function () {
+      if(cache.has(func.name) === false) {
+        console.log("create Cache");
+        cache.set(func.name, func(func.length));
+      }
+      return cache
+      //return cache.get(func.name);
+    };
+  }
+      
+  // 보조 함수
+  function increase(n) {
+    return ++n;
+  }
+  // 보조 함수
+  function decrease(n) {
+    return --n;
+  }
+
+  // makeCache는 함수를 인수로 전달받는다. 그리고 클로저를 캐시로 반환한다.
+  const increaser = makeCache(increase);
+  console.log(increaser()); // 1
+  console.log(increaser()); // 2
+
+  // makeCache는 함수를 인수로 전달받는다. 그리고 클로저를 캐시로 반환한다.
+  const decreaser = makeCache(decrease);
+  console.log(decreaser()); // -1
+  console.log(decreaser()); // -2
+  
+  ```
