--- a/study/javascript/에러핸들링.md
+++ b/study/javascript/에러핸들링.md
@@ -2,6 +2,26 @@
 
 ---
 
+- #### 비동기통신
+
+
+|명칭|에러 핸들링|
+|--|--|
+|Promise|1. Promise.catch() <br>2. Promise.then(() => { // 이행(fulfilled)}, (e) => { // reject(에러처리)})|
+|async await|try...catch|
+
+- ##### Promise
+    - 에러핸들링을 위해 catch 메소드를 사용한다.
+    - then의 두번째 인자인 onRejected를 사용한다.
+    - await 키워드를 사용해서 동기 코드로 변경한다.
+
+- ##### async await
+    - async 내에서 await 예외가 발생하면 throw 반환한다.
+    - then의 두번째 인자인 onRejected를 사용한다.
+    - await 키워드를 사용해서 동기 코드로 변경한다.
+
+---
+
 - ##### try catch
   - <span style="color: red;">try...catch는</span> <span style="font-size: 1.3rem; font-weight: bold;">동기적으로 작동</span>하기 때문에 <span style="color: red; font-size: 1.3rem; font-weight: bold;">비동기 오류를 처리하기에는 적합하지 않다.</span>
 
