--- a/study/javascript/고차함수,화살표함수.md
+++ b/study/javascript/고차함수,화살표함수.md
@@ -143,6 +143,8 @@ doubleSum(sum(3,2)); //cache hit 10
 
 #### 화살표 함수 (Arrow Function)
   - 컨텍스트가 있는 긴 코드보다 컨텍스트가 없는 짧은 코드를 담을 용도
+  - 화살표 함수를 call(), bind(), apply()를 사용해 호출할 때 this의 값을 정해주더라도 무시한다. 
+사용할 매개변수를 정해주는 건 문제 없지만, 첫 번째 매개변수(thisArg)는 null을 지정해야 한다.
   
   ||일반 함수|화살표 함수|
   |--|--|--|
@@ -150,3 +152,29 @@ doubleSum(sum(3,2)); //cache hit 10
   |유사배열 객체 arguments 지원여부|O|X|
   |new 호출|O|X|
   |super|O|X|
+
+  ```jsx
+
+
+  const defer = (f, ms) => {
+    return (message) => {
+      setTimeout(() => {
+        const func = f.bind(null, message);
+        console.log(func());
+
+        const funcApply = f.apply(null, [message]);
+        console.log(funcApply);
+
+        const funcCall = f.call(null, message);
+        console.log(funcCall);
+      }, ms);
+    }
+  };
+
+  const hi = (message) => {
+    return message || "HI";
+  }
+
+  const alarm = defer(hi, 1000);
+  alarm('안녕');
+  ```
