[feat] 비동기,에러핸들링,react 추가

--- a/study/javascript/에러핸들링.md
+++ b/study/javascript/에러핸들링.md
@@ -8,7 +8,7 @@
 |명칭|에러 핸들링|
 |--|--|
 |Promise|1. Promise.catch() <br>2. Promise.then(() => { // 이행(fulfilled)}, (e) => { // reject(에러처리)})|
-|async await|try...catch|
+|async await|try...catch<br>try...catch는 동기적으로 작동하고, async는 함수를 비동기로 만들지만, await은 함수를 동기코드로 변경한다. 그렇기 때문에 try...catch를 사용할 수 있다.|
 
 - ##### Promise
     - 에러핸들링을 위해 catch 메소드를 사용한다.
