--- a/study/javascript/스프레드,레스트.md
+++ b/study/javascript/스프레드,레스트.md
@@ -1,11 +1,12 @@
 #### 스프레드, 레스트 문법
+- <span style="font-weight:bold; color: blue;">ES6에서 도입했다.</span>
 
 ---
 
 
 |spread(스프레드)|rest(레스트)|
 |--|--|
-|1. 배열 요소를 단일 요소로 만든 것<br>2. 여러개의 인수를 한 개씩 분해<br>3. 함수 호출에 ...을 사용하면 spread|1. 모든 요소를 배열로 모은 것<br>2. 여러개의 함수 인수를 전달하는 경우 사용<br>3. 함수 매개변수에 ...을 사용하면 rest|
+|1. 배열 요소를 단일 요소로 만든 것<br>2. 여러 개의 인수를 한 개씩 분해<br>3. 함수 호출에 ...을 사용하면 spread|1. 모든 요소를 배열로 모은 것<br>2. 여러개의 함수 인수를 전달하는 경우 사용<br>3. 함수 매개변수에 ...을 사용하면 rest|
 
 ```jsx
 // spread
