--- a/study/javascript/에러핸들링.md
+++ b/study/javascript/에러핸들링.md
@@ -28,7 +28,7 @@
   ```jsx
 
   // setTimeout은 전형적인 비동기 함수이다. 
-  // 이벤트 큐에 콜백을 예약하기 때문에 try...cartch 블록에서 분리해야 한다.
+  // 콜백큐에 콜백을 예약하기 때문에 try...cartch 블록에서 분리해야 한다.
 
   // (1) - 잘못된 예시
   try {
@@ -55,8 +55,9 @@
   .catch((err) => {
     console.log(`실패 : ${err}`);
   })
+  ```
 
-
+  ```jsx
   // (2) - 잘못된 예시
   try {
     Promise.resolve().then(() => {
@@ -90,5 +91,4 @@
   }
 
   init()
-
   ```
