[feat] GC,워커 변경

--- a/study/react/리렌더링.md
+++ b/study/react/리렌더링.md
@@ -1,5 +1,7 @@
-### React useState 리렌더링
-- 효율적으로 렌더링하기 위해 여러 개의 상태값 변경 요청을 배치로 처리
+### React 리렌더링
+- 효율적으로 렌더링하기 위해 여러 개의 상태값 변경 요청을 <span style='font-weight:bold; color:red;'>batching 처리</span>
+- 동기로 처리한다면 상태 변경 함수를 호출 할 때마다 리렌더링 때문에 성능 이슈가 발생할 수 있다. 또한, 리렌더링하지 않는다면 데이터와 UI간의 불일치가 발생해서 혼란스러울 수 있다.
+
 ---
 
 ```jsx
@@ -14,24 +16,26 @@ setState(1);
 
 ---
 
-##### setState n번 호출하면 렌더링 몇번 발생할까?
-* 단 한 번만 렌더링 된다.
+##### setState 연속으로 n번 호출하면 렌더링 몇번 발생할까?
+* batching 작업으로 단 한 번만 렌더링 된다. (값은 가장 마지막에 선언한 것으로 고정)
 ```jsx
 
 const [myState, setState] = useState(0);
-setState(1);
-setState(2);
-setState(3);
+setState(1); // 100
+setState(2); // 100
+setState(3); // 100
 ...
-setState(100);
+setState(100); // 100
 ```
 
 ---
 
-##### 어떻게 한번에 업데이트를 할까?
-- dispatchSetState 구현체를 사용한다.
+##### 어떻게 한번에 업데이트를 할까? [참조자료](https://joong-sunny.github.io/react/react1/#%EF%B8%8F%EA%BC%AC%EB%A6%AC%EC%A7%88%EB%AC%B87-%EA%B7%B8-%EA%B3%BC%EC%A0%95%EC%9D%84-%EC%9E%90%EC%84%B8%ED%9E%88-%EB%93%A4%EC%96%B4%EB%B3%B4%EA%B3%A0%EC%8B%B6%EC%8A%B5%EB%8B%88%EB%8B%A4%EB%A7%8C)
+- dispatchSetState 구현체를 사용한다. (useState, useReducer, useContext, useCallback 모두)
 - requestUpdateLane에서 업데이트 우선순위를 찾는다.
-- 
+- update 객체에 lane, action, next등의 데이터 set하고, 원형 큐 생성
+- update.next => update.next => ... => 끝을 찾는다.
+- 렌더링
 
 
 
@@ -64,13 +68,13 @@ return (
 ---
 
 ##### 다음과 같이 첫 번째 인자를 넘기지 않는 것과, 넘기는 것이 공존한다면?
-- 첫 번째 인자를 넘기지 않는 setState에서 초기화 한다.
+- 첫 번째 인자를 넘기지 않는 setState에서 초기값을 참조 한다.
 
 ```jsx
 const [count, setCount] = useState(0)
 
 const upState = () => {
-    setCount(count + 1); // 이곳에서 초기화 발생!
+    setCount(count + 1); // 이곳에서 초기값 참조 발생
     console.log('1', count) // 0이지만 렌더링 되고 난 후, 4
     setCount(pv => pv+1)
     console.log('2 ', count); // 0이지만 렌더링 되고 난 후, 4
@@ -94,18 +98,18 @@ return (
 
 
 ##### 다음과 같이 첫 번째 인자를 넘기지 않는 것과, 넘기는 것이 공존한다면?(2)
-- 첫 번째 인자를 넘기지 않는 setState에서 초기화 한다.
+- 첫 번째 인자를 넘기지 않는 setState에서 초기값을 참조 한다.
 ```jsx
 const [count, setCount] = useState(0)
 
 const upState = () => {
-    setCount(count + 1); // 이곳에서 초기화 발생!
+    setCount(count + 1); // 이곳에서 초기값 참조 발생
     console.log('1', count) // 0이지만 렌더링 되고 난 후, 2
     setCount(pv => pv+1)
     console.log('2 ', count); // 0이지만 렌더링 되고 난 후, 2
     setCount(pv => pv+1)
     console.log('3 ', count); // 0이지만 렌더링 되고 난 후, 2
-    setCount(count + 1);   // 이곳에서 초기화 발생!
+    setCount(count + 1);   // 이곳에서 초기값 참조 발생
     console.log('4', count) // 0이지만 렌더링 되고 난 후, 2
     setCount(pv => pv+1)
     console.log('5 ', count); // 0이지만 렌더링 되고 난 후, 2
@@ -113,10 +117,25 @@ const upState = () => {
 
 return (
     <main className="card">
-        {/* <button onClick={() => setCount((count) => count + 1)}> */}
-        <button onClick={() => upState()}>
-        count is {count}
-        </button>
+        <button onClick={() => upState()}>count is {count}</button>
     </main>
 )
 ```
+
+
+--- 
+
+##### 리액트 lifecycle
+
+![리액트 lifecycle](https://user-images.githubusercontent.com/63194662/224787806-16a59a38-7a59-4d83-ba12-830d0460cd1a.png)
+
+- 비동기적으로 업데이트 발생해도, Render Phase / Commit Phase로 batching 작업이 동작하기 때문에 렌더링이 한번만 발생
+
+
+---
+
+##### React.memo 
+
+[참조자료](https://ssocoit.tistory.com/260)
+
+---
