--- a/study/코드리뷰/코드리뷰 방법.md
+++ b/study/코드리뷰/코드리뷰 방법.md
@@ -1,3 +1,6 @@
+[라인-참조자료](https://engineering.linecorp.com/ko/blog/effective-codereview#keep-changes-small)
+
+[배민-참조자료](https://techblog.woowahan.com/7152/)
 
 [참조자료](https://velog.io/@soyeon207/%EB%98%91%EB%98%91%ED%95%98%EA%B2%8C-PR%EC%9D%84-%ED%86%B5%ED%95%B4-%EC%BD%94%EB%93%9C%EB%A6%AC%EB%B7%B0-%ED%95%98%EA%B8%B0)
 
