--- a/study/잡/주고받기.md
+++ b/study/잡/주고받기.md
@@ -41,21 +41,38 @@
 
 ### 7. 웹사이트에서 접근성을 보장하기 위한 베스트 프랙티스는 무엇인가요?
 
-
 ### 8. 웹사이트의 초기 로딩 시간을 줄이는 방법에 대해 설명하세요. 어떤 기술과 방법을 사용할 것인지 구체적으로 말해 주세요.
 
 ### 9. State Management의 중요성에 대해 설명하고, 사이트에서 특히 중요한 이유를 들어 설명해 주세요.
 
 ### 10. Progressive Web Apps (PWA)의 주요 이점은 무엇이며, 플랫폼에 왜 적합한가요?
 
+### 11. 이커머스 플랫폼에서 성능 최적화를 위해 취한 조치들에 대해 설명해주세요. 어떤 기술을 사용했고, 그 결과는 어떠했나요?
 
-### 11. 귀하가 리드한 팀 또는 프로젝트에서 도입한 혁신적인 기술이나 접근 방식은 무엇인가요?
+### 12. 대규모 사용자 기반을 가진 이커머스 사이트의 프론트엔드 아키텍처를 설계할 때 고려해야 할 주요 요소들은 무엇인가요?
 
-### 12. 어떤 프론트엔드 개발 도구나 라이브러리가 귀하의 작업 효율을 상당히 향상시켰나요?
+### 13. 모바일 사용자를 위해 웹사이트의 반응형 디자인을 구현하는 데 있어 가장 중요한 고려사항은 무엇이라고 생각하나요?
 
-### 13. 프론트엔드 개발에서 가장 중요하게 생각하는 원칙은 무엇인가요?
+### 14. 자바스크립트의 비동기 처리 방식(예: Callbacks, Promises, Async/Await)에 대해 설명하고, 각각의 장단점을 비교해주세요.
 
+### 15. 웹 접근성(WCAG) 기준을 준수하는 것의 중요성에 대해 설명하고, 최근 프로젝트에서 이를 어떻게 구현했는지 예를 들어 설명해주세요.
 
-### 14. 진행했던 프로젝트에서 성능 측정을 어떻게 했는지, 어떻게 개선 했는지?
+### 16. 현대적인 프론트엔드 프레임워크(예: React, Angular, Vue.js) 중 하나를 사용하여 구현한 프로젝트에서 가장 도전적이었던 부분과 그 해결 방법을 설명해주세요.
 
-### 15. 장애 대응을 하기 위해 어떤 방식으로 대비를 하고 있는지?
+### 17. 이커머스 웹사이트에서 사용자 경험을 향상시키기 위해 구현한 기능 중 하나를 설명하고, 그 기능이 비즈니스 목표에 어떻게 기여했는지 분석해주세요.
+
+### 18. CSS와 JavaScript를 이용한 프론트엔드 최적화 기술에 대해 설명해주세요. 특히, 로딩 시간을 줄이는 기술에 초점을 맞춰주세요.
+
+### 19. 팀 리드나 멘토로서의 경험에 대해 말씀해주세요. 프로젝트를 이끌면서 팀원들을 어떻게 지도하고 동기를 부여했는지 구체적인 예를 들어 설명해주세요.
+
+### 20. 최신 웹 기술이나 프론트엔드 개발 트렌드 중 흥미롭게 생각하는 것이 있다면, 그 이유와 함께 어떻게 응용할 수 있을지 설명해주세요.
+
+### 21. 귀하가 리드한 팀 또는 프로젝트에서 도입한 혁신적인 기술이나 접근 방식은 무엇인가요?
+
+### 22. 어떤 프론트엔드 개발 도구나 라이브러리가 귀하의 작업 효율을 상당히 향상시켰나요?
+
+### 23. 프론트엔드 개발에서 가장 중요하게 생각하는 원칙은 무엇인가요?
+
+### 24. 진행했던 프로젝트에서 성능 측정을 어떻게 했는지, 어떻게 개선 했는지?
+
+### 25. 장애 대응을 하기 위해 어떤 방식으로 대비를 하고 있는지?
