--- a/study/잡/주고받기.md
+++ b/study/잡/주고받기.md
@@ -40,12 +40,58 @@
 - 코드 스플리팅을 통해 필요한 컴포넌트나 기능만 로딩할 수 있습니다. 이는 앱의 로딩 시간을 줄여줍니다.
 
 ### 7. 웹사이트에서 접근성을 보장하기 위한 베스트 프랙티스는 무엇인가요?
+- 시멘틱 HTML 사용
+    - header, footer, main, article, section등을 적절하게 사용한다. 추가적으로 이것은 좋은 SEO에 기여할 수 있습니다.
+- 이미지 대체 텍스트 제공
+    - 시각장애인은 이미지나 비디오를 볼 수 없기 때문에 스크린리더기에 표시되도록 대체 텍스트를 제공합니다.
+- 키보드 접근성 보장
+    - 모든 사용자는 키보드만으로도 웹을 탐색할 수 있어야 합니다.
+- 색상
+    - 색맹이 있는 사용자에게 혼란을 줄 수 있는 색상만 제공해서는 안됩니다. 이들을 위한 색상을 사용해야 합니다.
+- ARIA
+    - 스크린 리더 사용자가 콘텐츠를 쉽게 이해하도록 적절하게 사용합니다.
+- 접근성 준수 검사 도구 사용
+    - Lighthouse와 같은 도구를 사용합니다.
 
 ### 8. 웹사이트의 초기 로딩 시간을 줄이는 방법에 대해 설명하세요. 어떤 기술과 방법을 사용할 것인지 구체적으로 말해 주세요.
+- SSR이 가능한 상황
+    - Next.js의 SSR로 페이지 렌더링을 하겠습니다. 이는 서버에서 완전한 HTML을 렌더링하고, 인터렉션은 추후에 입히는 hydration 과정을 통해 사용자에게 화면은 상대적으로 빠르게 전달할 수 있습니다.
+- CSR만 가능한 상황
+    - Webworker를 사용해서 자주 접속하는 일부 페이지를 화면 진입시에 캐싱하겠습니다. 이를 통해 사용자는 캐싱된 청크를 얻을 수 있고, 데이터 통신만 서버와 이뤄지면 되므로 상대적으로 빠르게 로딩 할 수 있습니다.
+    - Webworker로 무거운 javascript 연산을 백그라운드에서 별도의 쓰레드에서 처리하고, UI쓰레드를 자유롭게 하여 더 좋은 사용자경험을 제공할 수 있습니다.
+- ISR이 가능한 상황
+    - 실시간 데이터가 필요하지 않지만, 주기적으로 재생성 되는 데이터가 있을 때 마치 SSG처럼 동작하게 해주는 렌더링 방식입니다. 이를 통해 사용자는 초기 로딩 시간을 줄일 수 있습니다.
+- 캐싱
+    - tanstack-query와 같은 라이브러리를 사용해서, http 요청을 캐싱합니다. 이것으로 반복된 요청을 캐싱하여 빠르게 전달할 수 있습니다.
+- CDN
+    - 사용자와 가장 가까운 서버에 정적자산을 업로드하고 접근할 수 있게하는 CDN을 사용하여 초기 로딩 시간을 줄일 수 있습니다.
 
-### 9. State Management의 중요성에 대해 설명하고, 사이트에서 특히 중요한 이유를 들어 설명해 주세요.
+### 9. State Management의 중요성에 대해 설명하고, 이커머스 사이트에서 특히 중요한 이유를 들어 설명해 주세요.
+- 상태관리는 리액트에서 데이터와 UI를 동기화하는 방법입니다. 리액트에서는 렌더링 과정이 단방향으로 동작하며, 이는 상위컴포넌트에서 하위컴포넌트로의 데이터 전달을 의미합니다. 단방향 동작의 이점으로는 아래의 5개가 있습니다.
+    1. 예측가능성
+        - 디버깅과 유지보수를 간소화하며, 코드의 가독성 높입니다
+    2. 재사용성
+        - 컴포넌트가 독립적으로 작동하고 주변 환경에 대해 최소한의 가정만 하도록 설계합니다.
+    3. 테스트 용이성
+        - 컴포넌트가 독립적으로 상태를 관리하고, 외부로부터 데이터를 props로 받기 때문에 테스트가 용이합니다.
+    4. 효율적인 데이터 관리
+        - 컴포넌트가 자신의 역할에 집중할 수 있게 함으로써 전체 애플리케이션의 데이터 흐름을 관리하기가 더욱 효율적입니다.
+    5. 버그 발생률 감소
+        - 데이터가 양방향으로 흐르는 경우, 상태 업데이트 시 예기치 않은 부작용이 발생할 수 있습니다. 단방향 데이터 흐름은 이러한 부작용을 최소화하며, 애플리케이션의 안정성을 높입니다. 
+        
+    상태관리를 통해 복잡한 이커머스 사이트에서는 4개의 이점을 얻을 수 있습니다.
+    1. 동시성 관리
+        - 이커머스 사이트는 동시에 많은 사용자가 접속하고, 상품을 장바구니에 추가하거나 주문하는 등의 활동을 합니다. 서버와 클라이언트 간의 상태 동기화를 효과적으로 관리함으로써, 사용자 간의 충돌을 방지하고 정확한 주문 처리를 보장할 수 있습니다.
+    2. 실시간 데이터 처리
+        - 재고 상태, 가격 변동, 프로모션 등 이커머스 사이트에서는 실시간으로 업데이트 되어야 하는 데이터가 많습니다. 상태 관리 시스템을 통해 이러한 데이터의 실시간 업데이트를 효과적으로 처리할 수 있습니다.
+    3. 복잡한 사용자 플로우 관리
+        - 사용자가 제품 검색에서 구매 결정, 결제 과정에 이르기까지 다양한 단계를 거칩니다. 각 단계에서 요구되는 데이터와 상태가 다르기 때문에, 이러한 복잡한 플로우를 효과적으로 관리하기 위해 상태 관리가 필요합니다.
+    4. 개인화 및 추천 시스템
+        - 사용자의 행동 패턴을 기반으로 개인화된 상품을 추천하거나 검색 결과를 최적화하기 위해, 사용자 관련 데이터와 상호작용 상태를 관리해야 합니다. 상태 관리는 이러한 개인화 기능을 구현하는 데 중요한 역할을 합니다.
+
 
 ### 10. Progressive Web Apps (PWA)의 주요 이점은 무엇이며, 플랫폼에 왜 적합한가요?
+- PWA는 웹에서 앱과 비슷한 사용자 경험을 제공할 수 있는 것이 가장 주요한 점입니다. 웹에서 푸쉬를 발송해서 사용자 참여를 유도할 수 있고, 웹의 정적자산을 캐싱을 통해 빠르게 제공할 수 있습니다. 즉, 푸쉬를 통해 사용자에게 이벤트와 추천상품 등을 빠르게 전달할 수 있고, 사용자에게 캐싱된 이미지 등을 제공하여 초기 로딩 시간을 줄일 수 있습니다.
 
 ### 11. 이커머스 플랫폼에서 성능 최적화를 위해 취한 조치들에 대해 설명해주세요. 어떤 기술을 사용했고, 그 결과는 어떠했나요?
 
@@ -67,7 +113,10 @@
 
 ### 20. 최신 웹 기술이나 프론트엔드 개발 트렌드 중 흥미롭게 생각하는 것이 있다면, 그 이유와 함께 어떻게 응용할 수 있을지 설명해주세요.
 
+
 ### 21. 귀하가 리드한 팀 또는 프로젝트에서 도입한 혁신적인 기술이나 접근 방식은 무엇인가요?
+    - SSR
+    - 
 
 ### 22. 어떤 프론트엔드 개발 도구나 라이브러리가 귀하의 작업 효율을 상당히 향상시켰나요?
 
