[feat ] 답,질문 추가

--- a/study/잡/주고받기.md
+++ b/study/잡/주고받기.md
@@ -18,15 +18,24 @@
 - CDN
     - 사용자와 인접한 서버에 데이터를 업로드하여 빠르게 접근할 수 있다.
 - 폰트 최적화
+- prefetcing
+    - 뷰포트내에 들어오거나, 명시적으로 작성하여 페이지를 미리 로드한다. 이를 통해 페이지 전환을 빠르게 할 수 있다.
+- partial rendering
+    - 특정 액션에 대한 응답으로 변하는 부분만 부분적으로 업데이트하고, 자원소모량을 최소화 한다.
+- soft navigation
+    - URL 변경 시 전체 페이지 로드가 아닌, 변하는 부분만 업데이트하여 페이지 전환의 부드러움과 빠른 로드를 목표로 한다.
+- bfcache(https://web.dev/articles/bfcache?hl=ko#browser-compatibility)
+    - 뒤로가기, 앞으로가기때 캐시된 데이터를 사용하여 빠르게 로딩 할 수 있습니다. 이는 반복 탐색의 속도를 높이는 데 고유한 역할을 하는 HTTP 캐시와는 다르고, 자바스크립트 힙을 포함한 메모리에 있는 전체 페이지의 스냅샷 입니다.
 
 ### 3. 크로스 브라우징 이슈를 해결하기 위해 어떤 접근 방식을 사용하나요? 구체적인 예를 들어 설명해 주세요.
 - babel과 같은 loader를 사용해서 표준 javascript로 변환하고, 지원하지 않는 기능은 polyfill로 대체 구현한다.
 - playwright 같은 E2E 테스트 도구를 통해, 다양한 브라우저에서 동일하게 동작하는지 테스트 할 수 있다.
 
 ### 4. 사이트에서 사용자 경험을 개선하기 위해 어떤 프론트엔드 기술을 적용할 수 있나요?
-- PWA로 네이티브 앱처럼 느껴지게 만든다. 푸시 알림을 사용하여 Retention을 높일 수 있다
-- React, Next.js와 같은 라이브러리 또는 프레임워크로 SPA를 구현하여 사용자에게 끊김없는 경험 제공한다.
-- 사용자와의 상호작용을 증대시키기 위해 인터렉티브 요소를 추가한다. 상품의 3D 뷰를 제공하거나, 확대 및 축소를 구현하여 상품을 자세히 볼 수 있도록 한다.
+- PWA로 네이티브 앱처럼 느껴지게 만든다. 푸시 알림을 사용하여 Retention을 높일 수 있습니다
+- React, Next.js와 같은 라이브러리 또는 프레임워크로 SPA를 구현하여 사용자에게 끊김없는 경험 제공합니다.
+- 사용자와의 상호작용을 증대시키기 위해 인터렉티브 요소를 추가한다. 상품의 3D 뷰를 제공하거나, 확대 및 축소를 구현하여 상품을 자세히 볼 수 있도록 합니다.
+- bfcache(https://web.dev/articles/bfcache?hl=ko#browser-compatibility)로 뒤로가기, 앞으로가기때 캐시된 데이터를 사용하여 빠르게 로딩 할 수 있습니다. 이는 반복 탐색의 속도를 높이는 데 고유한 역할을 하는 HTTP 캐시와는 다르고, 자바스크립트 힙을 포함한 메모리에 있는 전체 페이지의 스냅샷 입니다.
 
 ### 5. 자바스크립트 이벤트 루프에 대해 설명하고, 이것이 실시간 사용자 상호작용에 어떤 영향을 미치는지 예를 들어 설명해 주세요.
 - 브라우저에서는 함수를 실행할 때, 콜스택에 쌓아 둔 후에 더이상 콜스택에 넣을 것이 없다면 LIFO 구조로 실행됩니다. 만약 콜스택이 비어있다면 브라우저 영역인 태스크큐에서 setTimeout, setInterval, eventListener, fetch와 같은 함수를 이벤트 루프를 통해 콜스택으로 이동합니다. 이벤트 루프를 통해 태스크큐에 있는 값을 모두 콜스택으로 이동하면 콜스택을 비울 때 까지 LIFO 구조로 실행합니다. 태스크큐는 매크로 태스크큐와 마이크로 태스크큐가 있는데, 마이크로 태스크큐는 Promise, async, await이 존재하며 마이크로 태스크 큐는 콜스택이 비워질 때마다 이벤트 루프를 통해 콜스택으로 이동합니다. 하지만 매크로 태스크큐는 콜스택이 모두 비워져야만 이벤트 루프를 통해 콜스택으로 이동합니다.
@@ -63,8 +72,19 @@
     - 실시간 데이터가 필요하지 않지만, 주기적으로 재생성 되는 데이터가 있을 때 마치 SSG처럼 동작하게 해주는 렌더링 방식입니다. 이를 통해 사용자는 초기 로딩 시간을 줄일 수 있습니다.
 - 캐싱
     - tanstack-query와 같은 라이브러리를 사용해서, http 요청을 캐싱합니다. 이것으로 반복된 요청을 캐싱하여 빠르게 전달할 수 있습니다.
+    - head에 link red="preload"을 사용하여 HTML 문서 헤드에 추가하여 리소스를 미리 로드할 수 있습니다. 브라우저는 미리 로드된 리소스를 캐시에 저장하므로 필요할 때 즉시 사용할 수 있습니다. 스크립트를 실행하거나 스타일시트를 적용하지는 않습니다.
 - CDN
     - 사용자와 가장 가까운 서버에 정적자산을 업로드하고 접근할 수 있게하는 CDN을 사용하여 초기 로딩 시간을 줄일 수 있습니다.
+- prefetcing
+    - 뷰포트내에 들어오거나, 명시적으로 작성하여 페이지를 미리 로드한다. 이를 통해 페이지 전환을 빠르게 할 수 있다.
+- partial rendering
+    - 특정 액션에 대한 응답으로 변하는 부분만 부분적으로 업데이트하고, 자원소모량을 최소화 한다.
+        - /items/bottle/ <=> /items/notebook/: 병, 노트북 페이지가 렌더링 되고 공유하는 layout(/items/layout)은 유지됩니다.
+- soft navigation
+    - URL 변경 시 전체 페이지 로드가 아닌, 변하는 부분만 업데이트하여 페이지 전환의 부드러움과 빠른 로드를 목표로 한다.
+        - soft navigation => /items/bottle/ => /items/bottle/
+        - soft navigation => 뒤로가기, 앞으로 가기
+        - hard navigation => /items/bottle/ => /items/notebook/
 
 ### 9. State Management의 중요성에 대해 설명하고, 이커머스 사이트에서 특히 중요한 이유를 들어 설명해 주세요.
 - 상태관리는 리액트에서 데이터와 UI를 동기화하는 방법입니다. 리액트에서는 렌더링 과정이 단방향으로 동작하며, 이는 상위컴포넌트에서 하위컴포넌트로의 데이터 전달을 의미합니다. 단방향 동작의 이점으로는 아래의 5개가 있습니다.
@@ -94,10 +114,33 @@
 - PWA는 웹에서 앱과 비슷한 사용자 경험을 제공할 수 있는 것이 가장 주요한 점입니다. 웹에서 푸쉬를 발송해서 사용자 참여를 유도할 수 있고, 웹의 정적자산을 캐싱을 통해 빠르게 제공할 수 있습니다. 즉, 푸쉬를 통해 사용자에게 이벤트와 추천상품 등을 빠르게 전달할 수 있고, 사용자에게 캐싱된 이미지 등을 제공하여 초기 로딩 시간을 줄일 수 있습니다.
 
 ### 11. 이커머스 플랫폼에서 성능 최적화를 위해 취한 조치들에 대해 설명해주세요. 어떤 기술을 사용했고, 그 결과는 어떠했나요?
+- SSR
+    - FCP가 낮게 나와서 SSR로 변경하고 13% 상승했고, LCP는 22% 상승했습니다. tanstack-query와 next.js의 server-component를 사용했습니다.
+- CSR
+    - tanstack-query를 사용해서 동일한 요청일 때, 캐싱된 결과 값을 반환하여 네트워크 요청을 최소화 하고, 빠른 응답을 보였습니다.
+- CDN
+    - 사용자와 물리적으로 가까운 서버에 정적자산을 배포하여 서비스에 빠르게 접근할 수 있도록 했습니다.
+- prefetch
+    - 데이터 패칭으로 변경된 화면을 보여야 할 때, prefetch를 통해 미리 페이지를 네트워크에서 불러와서 빠른 로딩이 가능하도록 했습니다.
 
 ### 12. 대규모 사용자 기반을 가진 이커머스 사이트의 프론트엔드 아키텍처를 설계할 때 고려해야 할 주요 요소들은 무엇인가요?
+- 성능최적화
+    -  대규모 트래픽을 처리하기 위해서는 웹 사이트의 로딩 시간과 반응 속도가 매우 중요합니다. 이미지와 자원의 최적화, 비동기 로딩 기술, CDN 사용 등을 통해 빠른 콘텐츠 전달이 가능하도록 설계해야 합니다.
+- 유지보수성
+    - 컴포넌트 기반 개발을 통해 재사용 가능하고 유지보수가 쉬운 코드를 작성해야 합니다. 이는 추후 사이트의 확장성과 유연성을 보장합니다.
+- 보안
+    - 사용자 정보와 거래 정보를 보호하기 위한 강력한 보안 조치가 필요합니다. HTTPS, CSP, CSRF 토큰 등을 활용하여 데이터 전송과 상호 작용을 안전하게 보호해야 합니다.
+- 반응형 디자인
+    - 다양한 디바이스와 화면 크기에 맞추어 콘텐츠가 잘 보여지도록 반응형 웹 디자인을 구현해야 합니다. 이는 사용자 경험을 크게 향상시킬 수 있습니다.
+- 접근성
+    - 모든 사용자가 웹사이트를 쉽게 이용할 수 있도록 접근성을 고려한 설계가 필요합니다. 시각적으로는 명확한 글꼴과 색상 사용, 기술적으로는 스크린 리더 최적화 등이 포함됩니다.
+- 다국어
+    - 다양한 언어와 지역 특성을 고려한 사이트 설계가 중요합니다. 다국어 지원, 통화 및 날짜 형식의 지역화 등을 고려해야 합니다.
+- 스케일링 전략
+    - 사용자 수와 트래픽이 증가함에 따라 시스템이 유연하게 대응할 수 있도록 클라우드 서비스와 같은 스케일링 솔루션을 고려해야 합니다.
 
 ### 13. 모바일 사용자를 위해 웹사이트의 반응형 디자인을 구현하는 데 있어 가장 중요한 고려사항은 무엇이라고 생각하나요?
+- 
 
 ### 14. 자바스크립트의 비동기 처리 방식(예: Callbacks, Promises, Async/Await)에 대해 설명하고, 각각의 장단점을 비교해주세요.
 
@@ -125,3 +168,21 @@
 ### 24. 진행했던 프로젝트에서 성능 측정을 어떻게 했는지, 어떻게 개선 했는지?
 
 ### 25. 장애 대응을 하기 위해 어떤 방식으로 대비를 하고 있는지?
+
+### 26. 프로젝트에서 예상치 못한 기술적 문제에 직면했을 때, 어떻게 대응했는지?
+- 문제를 짧게, 해결을 길게
+
+### 27. 실패한 프로젝트에서 가장 큰 교훈을 어떻게 적용했는지?
+- .
+
+### 28. 자신의 기술적 결정이 팀 내에서 비판을 받았을 때, 어떻게 대응했는지?
+- .
+
+
+### 29. Cache-Control 설정 값들에 대해서 
+- no-cache
+    - 사용을 최소화 해야 bfcache도 최적화합니다. bfcache에서 페이지를 복원할 때는 HTTP 캐시가 포함되지 않기 때문입니다.
+- no-store
+- force-cache
+- max-age
+- s-max-age
