--- a/study/잡/주고받기.md
+++ b/study/잡/주고받기.md
@@ -140,40 +140,96 @@
     - 사용자 수와 트래픽이 증가함에 따라 시스템이 유연하게 대응할 수 있도록 클라우드 서비스와 같은 스케일링 솔루션을 고려해야 합니다.
 
 ### 13. 모바일 사용자를 위해 웹사이트의 반응형 디자인을 구현하는 데 있어 가장 중요한 고려사항은 무엇이라고 생각하나요?
-- 
+- 화면 크기 적응성: 다양한 화면 크기와 해상도에 맞게 콘텐츠가 자동으로 조절되어야 합니다. CSS 미디어 쿼리를 사용하여 다양한 디바이스에 맞는 레이아웃을 구성합니다.
+- 터치 인터페이스 최적화: 모바일 사용자는 주로 터치를 통해 인터랙션을 합니다. 따라서 버튼이나 링크 등의 요소는 터치하기 쉬운 크기로 제작되어야 하며, 터치 피드백을 제공해야 합니다.
+- 로딩 시간 최소화: 모바일 기기는 데스크탑보다 처리 능력이 낮고, 네트워크 속도도 느릴 수 있습니다. 이미지 최적화, 지연 로딩(lazy loading), 필요 최소한의 자바스크립트 사용 등을 통해 로딩 시간을 줄입니다.
+- 간결하고 명확한 디자인: 모바일 화면은 크기가 제한적이므로 콘텐츠를 간결하고 명확하게 전달해야 합니다. 중요한 정보는 눈에 잘 띄는 위치에 배치하고, 사용자의 주의를 분산시키는 요소는 제거합니다.
+- 네비게이션 간소화: 모바일 사이트의 네비게이션은 간소하고 직관적이어야 합니다. 하단 탭바, 햄버거 메뉴 등을 활용하여 사용자가 쉽게 원하는 페이지로 이동할 수 있도록 합니다.
+- 접근성: 모든 사용자가 웹사이트를 쉽게 사용할 수 있도록 접근성을 고려하여 설계해야 합니다. 텍스트 대체 속성, 적절한 색상 대비 등을 포함해야 합니다.
+
 
 ### 14. 자바스크립트의 비동기 처리 방식(예: Callbacks, Promises, Async/Await)에 대해 설명하고, 각각의 장단점을 비교해주세요.
+- Callbacks
+    - 자바스크립트에서 함수를 수행한 후에 실행되는 함수를 말합니다. 이는 콜백이 한개일 때는 직관적으로 표현하지만, 여러개가 있을 때는 콜백헬 이라고 불리는 가시성이 떨어지고, 코드의 복잡성을 증대시키는 문제가 있습니다.
+- Promises
+    - 비동기로 함수를 실행할 수 있습니다. 이는 콜백헬의 단점을 극복하기 위해 만들어진 기능입니다. 다만, 실행해야 할 비동기 함수가 한개일 때는 보일러플레이트가 존재하기 때문에 코드의 양이 늘어납니다. 하지만 비동기 함수가 여러개이거나 각각의 성공, 실패여부를 알아야하거나, 가장 먼저 성공한 함수를 알아야 하는 등의 복잡한 비동기에서는 유용하게 사용할 수 있습니다.
+- Async/Await
+    - Promise에서 비동기 함수가 한개일 때 보일러플레이트로 인해 늘어나는 코드의 양을 줄여주고, 비동기 함수를 직관적으로 만들 수 있습니다. 다만, 여러개의 비동기 함수를 실행하기 위해서는 여러개의 async, await이 필요하기 때문에 복잡한 구성에는 적합하지 않을 수 있습니다.
 
 ### 15. 웹 접근성(WCAG) 기준을 준수하는 것의 중요성에 대해 설명하고, 최근 프로젝트에서 이를 어떻게 구현했는지 예를 들어 설명해주세요.
+- 기준 준수
+    - 법적 요구사항, 윤리적 의무, 시장 확대, 검색 엔진 최적화
+- 대체 텍스트 사용: 모든 이미지에는 시각 장애가 있는 사용자를 위해 대체 텍스트를 제공했습니다. 이를 통해 스크린 리더가 이미지의 내용을 음성으로 전달할 수 있습니다.
+- 키보드 내비게이션: 웹사이트의 모든 기능은 키보드만으로도 접근 가능하게 했습니다. 이는 키보드 내비게이션에 의존하는 사용자들이 웹사이트를 원활하게 사용할 수 있도록 합니다.
+- 색상 대비 강화: 충분한 색상 대비를 제공하여 색상 식별에 어려움이 있는 사용자도 텍스트와 배경을 명확히 구분할 수 있도록 했습니다.
+- ARIA(Accessible Rich Internet Applications) 마크업 사용: 동적 콘텐츠와 웹 애플리케이션의 접근성을 향상시키기 위해 ARIA 레이블과 역할을 사용했습니다.
+- 시멘틱 구조 명확성: 웹사이트의 모든 페이지에는 명확한 헤더, 레이블 및 구조적 요소를 사용하여 내용이 명확하고 이해하기 쉽도록 했습니다.
 
 ### 16. 현대적인 프론트엔드 프레임워크(예: React, Angular, Vue.js) 중 하나를 사용하여 구현한 프로젝트에서 가장 도전적이었던 부분과 그 해결 방법을 설명해주세요.
 
-### 17. 이커머스 웹사이트에서 사용자 경험을 향상시키기 위해 구현한 기능 중 하나를 설명하고, 그 기능이 비즈니스 목표에 어떻게 기여했는지 분석해주세요.
+### 17. 이커머스 웹사이트에서 사용자 경험을 향상시키기 위한 기능과, 그 기능이 비즈니스 목표에 어떻게 기여할 수 있는지 알려주세요.
+- bfcache
+    - bfcache를 도입하여 상품을 보고 난 후, 뒤로가기 때 즉시 페이지 탐색이 가능하도록 하겠습니다. 이를 통해 사용자 경험을 향상시킬 수 있고 이는 곧 매출증대에 기여할 수 있습니다.
+- http cache
+     - tanstack-query를 사용하여 http cache를 도입하겠습니다. 이를 통해 반복 탐색의 속도를 증가시켜 사용자 경험을 향상시킬 수 있습니다.
+- monorepo 공통 컴포넌트
+    - UI/UX 통합으로 서비스에서 사용자가 예측 가능하도록 같은 역할을 하는 컴포넌트를 배치하므로 사용자 경험을 향상시킬 수 있습니다. 이는 사용자에게 일관적인 경험을 제공하여 고객 충성도를 향상시킬 수 있씁니다.
 
 ### 18. CSS와 JavaScript를 이용한 프론트엔드 최적화 기술에 대해 설명해주세요. 특히, 로딩 시간을 줄이는 기술에 초점을 맞춰주세요.
+- CSS 미니파이(minify): CSS 파일의 공백, 주석, 필요하지 않은 문자를 제거하여 파일 크기를 줄입니다. 이는 파일 전송 시간을 감소시키고, 로딩 시간을 단축합니다.
+- CSS 병합(merging): 여러 CSS 파일을 하나로 합치면 HTTP 요청의 수를 줄일 수 있습니다. 적은 수의 HTTP 요청은 로딩 시간을 개선하는 데 도움이 됩니다.
+- 비동기 또는 지연 로딩(Async or Deferred Loading): 중요하지 않은 CSS를 비동기적으로 로드하거나, 페이지 로드가 끝난 후에 로드하도록 설정할 수 있습니다. 이 방법은 초기 로딩 시간을 단축하는 데 효과적입니다.
+- Critical CSS 사용: 페이지 로드에 필수적인 CSS만을 먼저 로드하고, 나머지는 나중에 로드합니다. 이렇게 하면 브라우저가 페이지의 핵심 콘텐츠를 더 빨리 렌더링할 수 있습니다.
+- JavaScript 미니파이(minify): JavaScript 역시 미니파이 과정을 통해 불필요한 공백, 주석, 캐릭터 등을 제거하여 파일 크기를 줄일 수 있습니다.
+- JavaScript 병합(merging): 여러 JavaScript 파일을 하나로 합치면, CSS 최적화와 마찬가지로 HTTP 요청 수를 줄일 수 있습니다.
+- 비동기 및 지연 실행(Async and Defer): \<script> 태그에 async 또는 defer 속성을 사용하여 스크립트 로딩과 실행 시점을 조절할 수 있습니다. async는 스크립트를 비동기적으로 로드하며, defer는 HTML 파싱이 완료된 후 스크립트를 실행합니다.
+- Tree Shaking: 사용되지 않는 코드를 제거하여 최종 번들의 크기를 줄이는 기법입니다. 현대의 모듈 번들러(예: Webpack, Rollup)는 이 기능을 지원하여 불필요한 코드 부분을 제거할 수 있습니다.
+- 코드 분할(Code Splitting): 코드를 여러 부분으로 나누어 필요할 때만 로드하도록 구성할 수 있습니다. 이 방법은 사용자가 실제로 방문하는 페이지나 컴포넌트에 필요한 코드만 로드하여 초기 로드 시간을 단축합니다.
+
 
 ### 19. 팀 리드나 멘토로서의 경험에 대해 말씀해주세요. 프로젝트를 이끌면서 팀원들을 어떻게 지도하고 동기를 부여했는지 구체적인 예를 들어 설명해주세요.
+- 저를 포함한 두명뿐이었지만, 학습과 목표를 세우고 일을 했습니다. 프로젝트의 방향성을 공유하여 목표를 명시하고 매주 진척률을 기능개발 단위로 체크했습니다. 이를 통해 자신의 역할이 전체 목표에 어떻게 기여하는지 명확히 파악할 수 있도록 했습니다. 그리고 주도적인 학습을 위해 프론트엔드 지식을 얻는 유용한 소스를 공유했습니다.
 
 ### 20. 최신 웹 기술이나 프론트엔드 개발 트렌드 중 흥미롭게 생각하는 것이 있다면, 그 이유와 함께 어떻게 응용할 수 있을지 설명해주세요.
-
+- SSR
+    - 서비스 이용자에게 서버에서 렌더링한 HTML을 먼저 보내서, 빠르게 페이지를 탐색할 수 있도록 하고, 이후 발생하는 hydration을 통해 인터렉션을 가능하게 하여 서비스를 온전히 이용할 수 있습니다.
+- FinalizationRegistry
+    - 자바스크립트에서 GC가 발생했을 때, 호출되는 함수 입니다. 생성자를 통해 구현할 수 있고 사용하는 객체, 함수의 GC 발생여부를 판단하여 메모리 누수가 발생하는 지 알 수 있습니다. 이것으로 장시간 서비스를 이용중인 사용자가 메모리 누수로 인해 서비스에 부정적인 경험을 얻지 않도록 할 수 있습니다.
+- INP (Interaction to Next Paint)
+    - 2024년에 Stable된 Chrome 성능지표입니다. 반응성이 200ms이하면 응답성이 양호하고, 200~500ms면 개선해야합니다. 그 이상일 때는 좋지 않으므로 즉시 개선해야 합니다. 이 성능지표를 통해 서비스 이용자에게 즉각적인 반응성을 제공하여 좋은 사용자 경험을 제공할 수 있습니다.
 
 ### 21. 귀하가 리드한 팀 또는 프로젝트에서 도입한 혁신적인 기술이나 접근 방식은 무엇인가요?
     - SSR
     - 
 
 ### 22. 어떤 프론트엔드 개발 도구나 라이브러리가 귀하의 작업 효율을 상당히 향상시켰나요?
+- chrome 개발툴 performance, Memory
+- tanstack-query
+- Next.js
+- Zustand
 
 ### 23. 프론트엔드 개발에서 가장 중요하게 생각하는 원칙은 무엇인가요?
-
+- 사용자 경험(UX) 최적화
+    - 접근성(Accessibility): 모든 사용자가 콘텐츠를 쉽게 접근하고 이해할 수 있도록 설계하여, 다양한 기기나 보조 기술을 사용하는 사람들도 웹사이트를 원활하게 사용할 수 있도록 합니다.
+    - 반응성(Responsiveness): 다양한 디바이스와 화면 크기에 맞게 콘텐츠와 레이아웃이 자동으로 조정되어야 합니다. 이는 사용자가 어떤 기기를 사용하든 일관된 경험을 제공합니다.
+    - 성능(Performance): 웹사이트의 로딩 시간과 상호 작용의 속도가 빠르게 반응하도록 최적화합니다. 빠른 로딩 시간은 사용자 만족도를 높이고, 전환율을 증가시키는 데 중요합니다.
+    - 직관적인 디자인(Intuitive Design): 사용자가 사이트를 처음 방문했을 때, 직관적으로 네비게이션 할 수 있도록 명확하고 간결한 디자인을 제공합니다. 사용자가 원하는 정보를 쉽게 찾을 수 있도록 도와주어야 합니다.
+    - 유지 보수성(Maintainability): 코드는 깔끔하고 잘 조직되어 있어야 하며, 다른 개발자들이 이해하고 유지 보수하기 쉬워야 합니다. 이를 위해 컴포넌트 기반의 아키텍처를 사용하고, 명확한 주석과 문서화를 유지하는 것이 중요합니다.
+    
 ### 24. 진행했던 프로젝트에서 성능 측정을 어떻게 했는지, 어떻게 개선 했는지?
 
 ### 25. 장애 대응을 하기 위해 어떤 방식으로 대비를 하고 있는지?
+- 로그
+    - CPU 사용량이 급증하는 시간대를 분석해서 이벤트가 발생하기 전 미리 대응합니다.
+- 프로덕트 관리
+    - 문제가 발생했고, 즉시 대응이 불가능 하다면 이전 버전으로 배포하여 추가적인 문제발생을 차단합니다.
+
 
 ### 26. 프로젝트에서 예상치 못한 기술적 문제에 직면했을 때, 어떻게 대응했는지?
 - 문제를 짧게, 해결을 길게
 
 ### 27. 실패한 프로젝트에서 가장 큰 교훈을 어떻게 적용했는지?
-- .
+- 비용을 최소화하기 위해 빠르게 개발하고, 검증하고, 폐기하는 것
 
 ### 28. 자신의 기술적 결정이 팀 내에서 비판을 받았을 때, 어떻게 대응했는지?
 - .
