--- a/study/잡/주고받기.md
+++ b/study/잡/주고받기.md
@@ -242,3 +242,32 @@
 - force-cache
 - max-age
 - s-max-age
+
+### 30. 프론트엔드 엔지니어로서 노력하는 점이나 업무상 신경쓰는 부분
+
+### 31. 본인이 생각하는 좋은 소스코드란?
+
+### 32. 같이 일하기 불편한 동료의 유형
+- 혼자 일하는 동료
+
+
+
+
+### 33. 최근에 관심있게 본 기술
+- bfcache
+- FinalizationRegistry
+
+### 34. 프로젝트 중에 가장 어려운 기술적 문제는 어떤것이고, 어떻게 해결했는지?
+- 
+
+### 35. 개인 프로젝트와 학습 방법
+- 최근에 FinalizationRegistry를 사용하여 오픈소스를 만드려고 하고 있습니다. 프로젝트 이름은 GC-Stalker입니다. 이 프로젝트의 목적은 장기간 사용하는 서비스의 경우 메모리 누수로 인해 부정적인 사용자 경험을 제공하는 것을 방지하는 것입니다. FinalizationRegistry는 GC가 발생할 때 호출되는데 첫 번째 인수에는 추적에 필요한 개체이고, 두 번째 인수에는 GC가 발생한 경우 인수를 사용하여 정리 콜백이 호출됩니다. 이를 통해 GC되지 않은 개체를 판단할 수 있고, 추후에 장기간 GC되지 않은 개체에 null을 선언하여 외부에서 도달 불가능하게 만든 후, GC를 발생할 기회를 만들 수 있습니다. 학습은 MDN, javascript.info, 유튜브, V8.dev, medium과 같은 문서를 보며 공부하고 있습니다.
+
+### 36. 기술적으로 실패했던 경험에 대해 말하고, 어떤 교훈을 얻었는지?
+- 자막 편집 서비스를 구현할 때, 파형 렌더링 부분을 처음부터 만드려고 했습니다. 클릭, 드래그, 재생 중 진행막대 등의 기본 구현을 하면서 일정에 쫓기고 있었습니다. 프로젝트 기간이 약 20%정도 지났을 때, 기획의도대로 모든 것을 구현하기에는 시간이 부족할 것이라고 판단했고 wavesurfer라는 오픈소스로 변경했습니다. 오픈소스에는 요구한 기능의 절반정도가 이미 완성되어있었고, 사용하기 쉽도록 만들어져있어서, 부족한 기능만 추가로 구현했고 오픈 일자에 맞출 수 있었습니다. 이때 느낀 것은 모든 것을 직접 만들 필요는 없다는 것 입니다. 만약 리소스가 충분하다면 모든 기능을 직접 구현하여 서비스에 최적화 시킬 수 있을 것입니다. 하지만 프로젝트를 기한안에 오픈하기 위해서는 좋은 오픈소스를 잘 사용하는 것도 중요합니다. 현재 사용중인 대부분의 라이브러리, 프레임워크는 이미 대부분의 고민들을 해결하는데 도움을 주고 있습니다.
+
+### 37. 코드 리뷰에서 주로 어떤 피드백을 주고 받나요? 협업에서 기술적 의사소통은 어떻게 하나요?
+- 
+
+### 38. Next.js에서 가장 선호하는 기능은 무엇이고, 왜 그렇게 생각하나요?
+- SSR 입니다. react에서는 별도의 서버를 구성한 후, ssrLoadModule을 통해 SSR 진입점을 알려주고 이를 renderToString으로 넘겨줘야하는 복잡한 과정을 거쳐야 합니다. Next.js에서는 기본적으로는 server component로 작성되므로 편리하게 구현할 수 있습니다. 이렇게 구성한 SSR은 사용자에게 빠르게 서비스를 보여줄 수 있고, SEO에 도움이 되는 유용한 기능입니다.
