--- a/study/브라우저/프레임해부학.md
+++ b/study/브라우저/프레임해부학.md
@@ -159,7 +159,14 @@
 ## 레이어를 생성하는 방법
 - Frontend engineer가 독립적인 레이어 생성을 유도할 수 있는 방법으로 css를 추가하는 것이 있습니다. 이는 transform, opacity, will-change 속성이 해당하며, 이 속성을 추가하면 GPU가 처리하도록 <span style="font-weight: bold; font-size: 20px; color:red;">독립적인 레이어</span>를 생성합니다.
 ## 독립, 단일 레이어의 적절한 갯수?
-- 일반적으로 너무 많은 독립적인 레이어는 오버헤드를 증가시켜 성능을 저하시킬 수 있습니다. 반면, 적절한 레이어 분할을 통해 변형이 빈번한 요소를 독립레이어로 처리하고, 정적인 요소는 하나의 레이어로 처리하는 것이 최적의 성능을 발휘하는 방법입니다. 최적의 레이어 수와 구조는 페이지의 구체적인 동작과 요구사항에 따라 다릅니다.
+- 일반적으로 다음을 고려합니다. 
+    - ##### 적은 수의 레이어
+        - 대부분의 경우, 10~20개의 독립적인 레이어가 적절합니다. 이는 GPU의 부담을 줄이면서도 성능 최적화를 달성할 수 있는 범위입니다.
+    - ##### 상황에 따라 조절
+        - 특정 페이지나 애플리케이션의 복잡도에 따라 레이어 수를 조절합니다. 복잡한 애니메이션이 많은 경우, 더 많은 레이어가 필요할 수 있지만, 항상 성능 테스트를 통해 최적의 수를 찾는 것이 중요합니다.
+    <br/>
+- 너무 많은 독립적인 레이어는 오버헤드를 증가시켜 성능을 저하시킬 수 있습니다. 반면, 적절한 레이어 분할을 통해 변형이 빈번한 요소를 독립레이어로 처리하고, 정적인 요소는 하나의 레이어로 처리하는 것이 최적의 성능을 발휘하는 방법입니다. 최적의 레이어 수와 구조는 페이지의 구체적인 동작과 요구사항에 따라 다릅니다.
+
 ## 레이어 분할 과정
 1. 레이어 분할
     - 변환, 투명도 등 특정 속성을 가진 요소들을 <span style="font-weight: bold; font-size: 20px; color:red;">독립적인 레이어</span>로 분할합니다.
