[feat] 내용 매끄럽게

--- a/study/브라우저/프레임해부학.md
+++ b/study/브라우저/프레임해부학.md
@@ -55,7 +55,7 @@
 1. HTML과 CSS 파싱
     - 브라우저가 HTML과 CSS를 파싱하여 DOM과 CSSOM 트리를 생성합니다.
 2. 렌더 트리 생성
-    - DOM과 CSSOM 트리를 결합하여 렌더 트리를 만듭니다/
+    - DOM과 CSSOM 트리를 결합하여 렌더 트리를 만듭니다
 3. 레이아웃 계산
     - 각 요소의 위치와 크기를 계산합니다.
 4. 페인트
@@ -113,13 +113,13 @@
     - 스택 컨텍스트 및 깊이 정렬 요소를 생성하는 프로세스입니다.
 
 8. Paint
-    - 이는 두 부분으로 구성된 프로세스 중 첫 번째입니다. 페인팅은 새 요소 또는 시각적으로 변경된 요소에 대한 그리기 호출(여기에 직사각형 채우기, 거기에 텍스트 쓰기)을 기록하는 것입니다. 두 번째 부분은 그리기 호출이 실행되고 텍스처가 채워지는 래스터화(픽셀 채우기)입니다. 이 부분은 그리기 호출을 기록하며 일반적으로 래스터화(픽셀 채우기)보다 훨씬 빠르지만 두 부분을 통칭하여 " 그림".
+    - 이는 두 부분으로 구성된 프로세스 중 첫 번째입니다. 페인팅은 새 요소 또는 시각적으로 변경된 요소에 대한 그리기 호출(여기에 직사각형 채우기, 거기에 텍스트 쓰기)을 기록하는 것입니다. 두 번째 부분은 그리기 호출이 실행되고 텍스처가 채워지는 래스터화(픽셀 채우기)입니다. 이 부분은 그리기 호출을 기록하며 일반적으로 래스터화(픽셀 채우기)보다 훨씬 빠르지만 두 부분을 통칭하여 "Painting"이라고 합니다.
 
 9. Composite
-    - 레이어 및 타일 정보가 계산되어 처리할 수 있도록 합성기 스레드로 다시 전달됩니다. 이는 무엇보다도 will-change겹치는 요소 및 하드웨어 가속 캔버스와 같은 사항을 설명합니다.
+    - 레이어 및 타일 정보가 계산되어 처리할 수 있도록 합성기 스레드로 다시 전달됩니다. 이는 무엇보다도 will-change, 겹치는 요소 및 하드웨어 가속 캔버스와 같은 사항을 설명합니다.
 
 10. Raster Scheduled and Rasterize
-    - 이제 페인트 작업에 기록된 그리기 호출이 실행됩니다. 이는 Compositor Tile Workers 에서 수행되며 그 수는 플랫폼 및 장치 기능에 따라 다릅니다. 예를 들어 Android에서는 일반적으로 작업자 한 명을 찾을 수 있지만 데스크톱에서는 때때로 네 명을 찾을 수 있습니다. 래스터화(픽셀 채우기)는 레이어 측면에서 수행되며 각 레이어는 타일로 구성됩니다.
+    - 이제 페인트 작업에 기록된 그리기 호출이 실행됩니다. 이는 Compositor Tile Workers 에서 수행되며 그 수는 플랫폼 및 장치 기능에 따라 다릅니다. 예를 들어 Android에서는 일반적으로 작업자 한 개를 찾을 수 있지만 데스크톱에서는 때때로 네 개를 찾을 수 있습니다. 래스터화(픽셀 채우기)는 레이어 측면에서 수행되며 각 레이어는 타일로 구성됩니다.
 
 11. Frame End
     - 다양한 레이어의 타일이 모두 래스터화(픽셀 채우기)되면 모든 새 타일이 입력 데이터(이벤트 핸들러에서 변경되었을 수 있음)와 함께 GPU 스레드에 커밋됩니다.
