--- a/study/브라우저/프레임해부학.md
+++ b/study/브라우저/프레임해부학.md
@@ -101,7 +101,7 @@
     - 새로운 입력 데이터가 있고 최대한 vsync에 가깝기 때문에 화면을 시각적으로 업데이트하기에 이상적인 장소입니다. 스타일 계산과 같은 다른 시각적 작업은 이 작업 후에 수행될 예정 이므로 요소를 변경하는 데 이상적으로 배치됩니다. 예를 들어 100개의 클래스를 변경하면 100개의 스타일 계산이 발생하지 않습니다. 나중에 일괄 처리되어 처리됩니다. 유일한 주의 사항은 계산된 스타일이나 레이아웃 속성(예: el.style.backgroundImage또는 el.style.offsetWidth)을 쿼리하지 않아야 한다는 것입니다. 그렇게 하면 재 계산 스타일, 레이아웃 또는 둘 다를 앞으로 가져오게 되어 강제 동기식 레이아웃이 발생하거나 더 나쁘게는 [레이아웃 스래싱](https://web.dev/articles/avoid-large-complex-layouts-and-layout-thrashing?hl=ko)이 발생하게 됩니다 .
 
 4. Parse HTML
-    - 새로 추가된 HTML이 처리되고 DOM 요소가 생성됩니다. 페이지를 로드하는 동안이나 와 같은 작업 후에 이러한 내용을 더 많이 보게 될 것입니다 appendChild.
+    - 새로 추가된 HTML이 처리되고 DOM 요소가 생성됩니다. 페이지를 로드하는 동안이나 appendChild와 같은 작업 후에 이러한 내용을 더 많이 보게 될 것입니다.
 
 5. Recalc Styles
     - 스타일은 새로 추가되거나 변경된 항목에 대해 계산됩니다. 변경된 내용에 따라 전체 트리일 수도 있고 범위를 축소할 수도 있습니다. 예를 들어 본문에서 클래스를 변경하는 것은 광범위한 작업이 될 수 있지만 브라우저는 스타일 계산 범위를 자동으로 제한하는 데 이미 매우 똑똑하다는 점에 주목할 가치가 있습니다.
