--- a/study/브라우저/프레임해부학.md
+++ b/study/브라우저/프레임해부학.md
@@ -113,7 +113,7 @@
     - 스택 컨텍스트 및 깊이 정렬 요소를 생성하는 프로세스입니다.
 
 8. Paint
-    - 이는 두 부분으로 구성된 프로세스 중 첫 번째입니다. 페인팅은 새 요소 또는 시각적으로 변경된 요소에 대한 그리기 호출(여기에 직사각형 채우기, 거기에 텍스트 쓰기)을 기록하는 것입니다. 두 번째 부분은 그리기 호출이 실행되고 텍스처가 채워지는 래스터화(픽셀 채우기)입니다. 이 부분은 그리기 호출을 기록하며 일반적으로 래스터화(픽셀 채우기)보다 훨씬 빠르지만 두 부분을 통칭하여 "Painting"이라고 합니다.
+    - 이는 두 부분으로 구성된 프로세스 중 첫 번째인 페인팅은 새 요소 또는 시각적으로 변경된 요소에 대한 그리기 호출(여기에 직사각형 채우기, 거기에 텍스트 쓰기)을 기록하는 것입니다. 두 번째 부분은 그리기 호출이 실행되고 텍스처가 채워지는 래스터화(픽셀 채우기)입니다. 이 부분은 그리기 호출을 기록하며 일반적으로 래스터화(픽셀 채우기)보다 훨씬 빠르지만 두 부분을 통칭하여 "Painting"이라고 합니다.
 
 9. Composite
     - 레이어 및 타일 정보가 계산되어 처리할 수 있도록 합성기 스레드로 다시 전달됩니다. 이는 무엇보다도 will-change, 겹치는 요소 및 하드웨어 가속 캔버스와 같은 사항을 설명합니다.
