--- a/study/브라우저/프레임해부학.md
+++ b/study/브라우저/프레임해부학.md
@@ -103,7 +103,7 @@
 4. Parse HTML
     - 새로 추가된 HTML이 처리되고 DOM 요소가 생성됩니다. 페이지를 로드하는 동안이나 appendChild와 같은 작업 후에 이러한 내용을 더 많이 보게 될 것입니다.
 
-5. Recalc Styles
+5. Recalculate Styles
     - 스타일은 새로 추가되거나 변경된 항목에 대해 계산됩니다. 변경된 내용에 따라 전체 트리일 수도 있고 범위를 축소할 수도 있습니다. 예를 들어 본문에서 클래스를 변경하는 것은 광범위한 작업이 될 수 있지만 브라우저는 스타일 계산 범위를 자동으로 제한하는 데 이미 매우 똑똑하다는 점에 주목할 가치가 있습니다.
 
 6. Layout
